--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
     <body>
         <div id="app"></div>
 
-        <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+        <!--because we are using webpack we can remove the following scripts definition-->
+        <!-- <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-        <script src="scripts/app.js"></script>
+        <script src="scripts/app.js"></script> -->
+        <script src="bundle.js"></script>
     </body>
 </html>
