--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>First React App</title>
+        <title>Expensify</title>
         <link rel="icon" type="images/png" href="/images/favicon.png" />
     </head>
     <body>
