--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Expensify</title>
-        <link rel="icon" type="images/png" href="/images/favicon.png" />
+        <title>First React App</title>
     </head>
     <body>
         <div id="app"></div>
